Fixed issue where some abilities were not appearing in the game. Fixed issue where Ability page was accessible to non-admins